# nano

./: .gitignore  Dockerfile  Procfile  README.md  config.yml.sample  docker-compose.yml  pyproject.toml  requirements.txt
hakase/: client.py
hakase/cogs/: crypto.py  ping.py  voice.py
nano/: client.py
nano/cogs/: crypto.py  voice.py  weather.py
